[package]
name = "paper-plane"
version = "0.1.0-beta.5"
authors = ["Marco Melorio <marco.melorio@protonmail.com>", "Marcus Behrendt <marcus.behrendt.86@gmail.com>"]
edition = "2021"

[dependencies]
adw = { version = "0.7", package = "libadwaita", features = ["v1_6"] }
anyhow = "1"
async-channel = "2"
ellipse = "0.2"
futures = { version = "0.3", default-features = false }
gettext-rs = { version = "=0.7.0", features = ["gettext-system"] }
gtk = { version = "0.9", package = "gtk4", features = ["gnome_47", "blueprint"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
indexmap = "2"
locale_config = "0.3"
log = "0.4"
ori = { git = "https://github.com/paper-plane-developers/origami.git", tag="v0.9.0", package = "origami" }
pretty_env_logger = "0.5"
qrcode-generator = { version = "5", default-features = false }
regex = "1"
rlt = { git = "https://github.com/paper-plane-developers/gtk-rlottie-rs.git", tag = "v0.9.0", package = "gtk-rlottie" }
shumate = { version = "0.6", package = "libshumate" }
tdlib = { version = "0.10", default-features = false }
temp-dir = "0.1"
thiserror = "2"

[profile.release]
lto = true
codegen-units = 1
